更新權限管控

--- a/med_request/popup_unit_content.css
+++ b/med_request/popup_unit_content.css
@@ -99,6 +99,7 @@
     display: flex;
     margin-bottom: 4px;
     align-items: center;
+    /* height: 30px; */
 }
 .disable_btn {
     cursor: not-allowed;
@@ -116,4 +117,5 @@
     background-color: #d1d1d1;
     color: #000000;
     flex-grow: 1;
+    height: 33px;
 }
