--- a/frontpage/front_new.css
+++ b/frontpage/front_new.css
@@ -318,6 +318,13 @@
     transition: all 0.2s ease-out;
 }
 
+.web_icon_disable {
+    position: relative;
+    cursor: not-allowed;
+    opacity: 0.7;
+    filter: brightness(0.2);
+}
+
 @media screen and (max-width: 1200px) {
     .main_container {
         justify-content: flex-end;
