--- a/medicine_cart/allocate.css
+++ b/medicine_cart/allocate.css
@@ -74,19 +74,71 @@
     display: none;
 }
 
-.p_bed_info_container {
+/* .p_bed_info_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} */
+.pbic_top {
     width: 100%;
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    margin-bottom: 16px;
+}
+.pbic_disease_container {
+    padding: 8px;
+    border-radius: 5px;
+    background-color: rgb(219, 219, 219);
 }
 .p_bed_simple_container,
 .p_bed_detailed_container {
     width: 48%;
-    padding: 16px;
+    padding: 8px;
     border-radius: 5px;
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(219, 219, 219);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
+.pbsc_info {
+    padding: 0px 12px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.pbsc_doc {
+    padding-right: 8px;
+}
+
+/* 給整個表格加上邊框線 */
+.pbict_table {
+    border-collapse: collapse; /* 確保邊框不會重疊 */
+    width: 100%; 
+    /* margin: auto; */
+}
+
+/* 給所有的td元素加上邊框線 */
+.pbict_table td {
+    border: 1px solid black; /* 黑色邊框，1px寬 */
+    padding: 4px 6px; /* 內距為8px */
+}
+
+/* 給表頭的td元素設置不同的背景顏色 */
+.pbict_thead {
+    background-color: #c4c4c4; /* 淺灰色背景 */
+    text-align: center;
+}
+.pbict_table tr td:first-child {
+    width: 100px;
+    text-align: center;
+}
+.pbict_table tr td:nth-child(2) {
+    width: 200px;
+    text-align: center;
+}
+
 .p_bed_med_container {
     width: 100%;
 }
@@ -126,6 +178,13 @@
 .pbmh_pre_btn {
     position: absolute;
     left: 0px;
+}
+.pbmh_pre_btn_not_allow {
+    cursor: not-allowed;
+    background-color: #d4d4d4;
+}
+.pbmh_pre_btn_not_allow:hover {
+    background-color: #d4d4d4;
 }
 .pbmh_checked_submit_btn {
     margin-right: 24px;
@@ -221,7 +280,7 @@
     flex-grow: 1;
 }
 .med_name_card_container {
-    display: flex;
+    /* display: flex; */
 }
 .med_card_code,
 .med_card_name,
@@ -237,10 +296,47 @@
     height: 40px;
     cursor: pointer;
 }
+.no_data_div {
+    font-size: 24px;
+    font-weight: 600;
+}
+.no_med_info_div {
+    width: 100%;
+    padding: 40px;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+}
+.pbd_table {
+    border-collapse: collapse;
+    width: 100%;
+}
+.pbd_table td {
+    width: 25%;
+    border: 1px solid black;
+    padding: 2px;
+    text-align: center;
+}
+.pbd_th {
+    background-color: #c4c4c4; /* 這裡設定了背景顏色，你可以替換成其他顏色 */
+}
+.p_red_notice {
+    color: rgb(229, 61, 61);
+    font-weight: 600;
+}
+  
 
 @media screen and (max-width: 1200px) {
     .p_bed_simple_container,
     .p_bed_detailed_container {
         padding: 8px;
+    }
+    .pbict_table tr td:first-child {
+        width: 60px;
+        text-align: center;
+    }
+    .pbict_table tr td:nth-child(2) {
+        width: 100px;
+        text-align: center;
     }
 }
