--- a/medicine_cart/popup_bed_list.css
+++ b/medicine_cart/popup_bed_list.css
@@ -53,6 +53,7 @@
     margin-bottom: 8px;
     cursor: pointer;
     color: white;
+    overflow: hidden;
 }
 .pp_current_bed::after {
     content: "";
@@ -85,6 +86,23 @@
     left: 0px;
     padding: 0px 0px 1px 0px;
     border-radius: 0px 0px 5px 5px;
+}
+.pp_nouse_bed {
+    cursor: not-allowed;
+    background-color: #d4d4d4;
+}
+.pp_nouse_bed::before {
+    content: "空床";
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1px 12px 2px;
+    background-color: #9a9a9a;
+    width: 100%;
+    bottom: 0px;
+    font-size: 12px;
+    color: #000000;
 }
 .ppbl_footer_container {
     display: flex;
