--- a/batch_storage/style.css
+++ b/batch_storage/style.css
@@ -17,7 +17,6 @@
 
 .header {
     width: 100%;
-    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -169,7 +168,9 @@
     display: block;
     margin-right: 16px;
     appearance: none;
+    min-width: 25px; /* 調整寬度 */
     width: 25px; /* 調整寬度 */
+    min-height: 25px; /* 調整高度 */
     height: 25px; /* 調整高度 */
     border: 2px solid #000; /* 邊框顏色和大小 */
     border-radius: 3px; /* 邊框圓角 */
@@ -215,3 +216,35 @@
     display: block;
     z-index: 9;
 }
+
+@media screen and (max-width: 550px) {
+    .header {
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        padding-left: 0px;
+    }
+    .header_title_container {
+        width: 100%;
+        padding-left: 80px;
+    }
+    .header_btn_container {
+        margin-right: auto;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 12px;
+    }
+    .main_search_container {
+        width: 100%;
+    }
+    .search_condition_container {
+        flex-direction: column;
+    }
+    .search_select_table,
+    .search_input_container,
+    .search_input_type_select,
+    .search_input {
+        width: 100%;
+    }
+}
+
