--- a/medGroup/medGroup.css
+++ b/medGroup/medGroup.css
@@ -98,6 +98,9 @@
     background-color: #6B6B63;
     border: 1px solid black;
 }
+.gm_content_container {
+    padding-bottom: 100px;
+}
 .gm_content_med_search_button {
     min-width: 80px;
 }
