--- a/medGroup/medManager.css
+++ b/medGroup/medManager.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'Noto Sans TC';
+    src: url('../font/Noto_Sans_TC/NotoSansTC-VariableFont_wght.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Noto Sans TC", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+}
+
+.btn {
+    margin: 4px;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 16px;
+    border: 1px solid black;
+    color: #F6F7F7;
+    padding: 4px 24px;
+    border-radius: 5px;
+    transition: all 0.2s ease-out;
+    background-color: black;
+  }
+  .btn:hover {
+    background-color: #6B6B63;
+    transition: all 0.2s ease-out;
+  }
 .mm_header_container {
     padding: 8px 68px;
     display: flex;
@@ -15,23 +46,13 @@
     justify-content: center;
 }
 
-.mm_header_btn_style {
+.mm_header_btn_style,
+.mm_header_g_med_list_btn {
     margin: 4px;
     font-weight: 600;
-    cursor: pointer;
-    font-size: 20px;
-    border: 1px solid black;
-    background-color: #6B6B63;
-    color: #F6F7F7;
-    padding: 4px 16px;
     border-radius: 5px;
-    transition: all 0.2s ease-out;
 }
 
-.mm_header_btn_style:hover {
-    background-color: black;
-    transition: all 0.2s ease-out;
-}
 
 .mm_main_container {
     margin: auto;
@@ -64,7 +85,6 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -117,21 +137,7 @@
 }
 .mm_med_display_btn_style {
     margin: 0px 12px;
-    padding: 4px 16px;
     font-weight: 600;
-    border: 1px solid #9b9b9b;
-    background-color: #cbcbcb;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.2s ease-in;
-}
-.mm_med_display_btn_style:hover {
-    background-color: #9f9f9f;
-    transition: all 0.2s ease-in;
-}
-#delete_med_btn {
-    background-color: #292929;
-    color: #f7f7f7;
 }
 
 .popup_med_search_bar_container {
@@ -165,7 +171,6 @@
 
 .popup_med_search_btn {
     margin-right: 4px;
-    padding: 2px 12px;
     cursor: pointer;
 }
 .popup_med_search_btn_container {
@@ -175,17 +180,7 @@
     justify-content: space-evenly;
 }
 .popup_med_search_btn_style {
-    padding: 4px 16px;
     font-weight: 600;
-    border: 1px solid #9b9b9b;
-    background-color: #cbcbcb;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: all 0.2s ease-in;
-}
-.popup_med_search_btn_style:hover {
-    background-color: #9f9f9f;
-    transition: all 0.2s ease-in;
 }
 
 .mm_med_diplay_notice {
@@ -358,6 +353,8 @@
     font-size: 16px;
     font-weight: 600;
     width: 200px;
+    border: 1px solid #000;
+    border-radius: 5px;
 }
 
 .popup_med_item_control_div {
@@ -420,11 +417,6 @@
 .underline_popup_btn_style {
     font-size: 1.1rem;
     font-weight: 600;
-    padding: 4px 16px;
-    background-color: #cbcbcb;
-    border-radius: 5px;
-    border: 1px solid #292929;
-    cursor: pointer;
 }
 
 #search_med_select_method {
@@ -465,10 +457,6 @@
     font-weight: 600;
 }
 .search_med_btn {
-    padding: 4px 16px;
-    border-radius: 5px;
-    border: 1px solid #292929;
-    background-color: #cbcbcb;
     font-weight: 600;
     cursor: pointer;
 }
@@ -486,7 +474,6 @@
     flex-grow: 1;
 }
 .med_item_img_container {
-    height: 128px;
     width: 156px;
 }
 .med_item_img_container > img {
@@ -507,7 +494,7 @@
     width: 50px;
 }
 .med_item_ctname_content_span {
-    width: 64px;
+    width: 50px;
 }
 .med_item_btn_container {
     margin-top: 4px;
@@ -520,18 +507,7 @@
 .med_item_modify_btn,
 .med_item_delete_btn {
     margin-left: 8px;
-    padding: 4px 12px;
-    border-radius: 5px;
-    background-color: #969696;
     font-weight: 600;
-    cursor: pointer;
-    transition: all 0.2s ease-in;
-}
-.med_item_modify_btn:hover,
-.med_item_delete_btn:hover {
-    background-color: #5c5c5c;
-    transition: all 0.2s ease-in;
-    color: #f0f0f0;
 }
 
 /* #popup_date_manager:disabled,
