--- a/medicine_cart/popup_bed_list.css
+++ b/medicine_cart/popup_bed_list.css
@@ -39,21 +39,32 @@
 .ppbl_main_container {
     display: grid;
     justify-content: space-between;
-    grid-template-columns: 19% 19% 19% 19% 19%;
+    grid-template-columns: 18% 18% 18% 18% 18%;
 }
 .pp_bed_card {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 16px 0px;
+    /* padding: 16px 0px; */
+    width: 100%;
+    height: 52px;
+    font-size: 18px;
     font-weight: 600;
     border-radius: 5px;
     background-color: #717171;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     cursor: pointer;
     color: white;
-    overflow: hidden;
+    /* overflow: hidden; */
+}
+.pp_bed_notice {
+    display: block;
+    position: absolute;
+    width: 24px;
+    top: -8px;
+    right: -6px;
+    z-index: 10;
 }
 .pp_current_bed::after {
     content: "";
@@ -97,8 +108,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1px 12px 2px;
     background-color: #9a9a9a;
+    border-radius: 0px 0px 5px 5px;
     width: 100%;
     bottom: 0px;
     font-size: 12px;
@@ -107,4 +118,17 @@
 .ppbl_footer_container {
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width: 550px) {
+    .popup_bed_list_div {
+        width: 360px;
+    }
+    .ppbl_main_container {
+        height: 520px;
+        overflow-y: scroll;
+    }
+    .pp_bed_card {
+        height: 60px;
+    }
 }
