--- a/medicine_cart/popup_med_list.css
+++ b/medicine_cart/popup_med_list.css
@@ -105,9 +105,11 @@
 }
 .ppml_bed_list_container {
     display: grid;
-    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    justify-content: space-between;
 }
 .ppml_bed_card {
+    position: relative;
     padding: 4px 12px;
     border-radius: 5px;
     display: flex;
@@ -116,7 +118,24 @@
     background-color: #888;
     cursor: pointer;
     color: #ffffff;
-    margin: 6px;
+    width: 90%;
+    margin: 8px 0px;
+}
+.ppml_bed_card_qty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background-color: #f7b875;
+    border-radius: 10px;
+    right: -4px;
+    top: -6px;
+    color: #000;
+    padding-left: 1px;
+    padding-bottom: 1px;
+    font-weight: 600;
 }
 .ppml_bed_done {
     background-color: #C1EA69;
@@ -124,4 +143,18 @@
 }
 .display_none {
     display: none;
+}
+
+@media screen and (max-width: 550px) {
+    .popup_med_list_div {
+        width: 360px;
+    }
+    .ppml_card_info_container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .ppml_bed_list_container {
+        grid-template-columns: 25% 25% 25% 25%;
+    }
 }
