--- a/medicine_cart/popup_med_list_search.css
+++ b/medicine_cart/popup_med_list_search.css
@@ -30,7 +30,8 @@
 .ppmls_search_btn {
     text-align: center;
 }
-.ppmls_type_select {
+.ppmls_type_select,
+.ppmls_table_select {
     width: 100%;
     margin-bottom: 20px;
     padding: 4px;
@@ -50,6 +51,7 @@
     font-size: 18px;
     font-weight: 600;
     display: block;
+    text-align: center;
 }
 .ppmls_input:disabled {
     cursor: not-allowed;
