--- a/requisitions_upload/popup_code_compare.css
+++ b/requisitions_upload/popup_code_compare.css
@@ -1,5 +1,6 @@
 .popup_code_compare_div {
-    width: 330px;
+    top: 40% !important;
+    width: 360px;
 }
 
 .pcc_header_container,
@@ -8,6 +9,9 @@
     position: relative;
     display: flex;
     justify-content: center;
+}
+.pcc_footer_container {
+    margin-top: 16px;
 }
 .pcc_h_title {
     padding: 4px 48px;
@@ -47,4 +51,63 @@
     border: 1px solid #000;
     font-size: 16px;
     flex-grow: 1;
+}
+.pcc_med_search_block {
+    padding: 8px;
+    border-radius: 5px;
+    background-color: #d7d7d7;
+    width: 100%;
+    border: 1px solid #000000;
+    min-height: 100px;
+    position: relative;
+}
+.pcc_med_search_title {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 16px;
+}
+.pccms_content {
+    display: flex;
+}
+.pccms_select {
+    display: block;
+    padding: 2px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 16px;
+    margin-right: 12px;
+}
+.pccms_input {
+    display: block;
+    padding: 2px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-size: 16px;
+    flex-grow: 1;
+}
+.pccms_input_result {
+    /* display: none; */
+    position: absolute;
+    width: 230px;
+    max-height: 240px;
+    top: 80px;
+    right: 11px;
+    border-radius: 2px;
+    background-color: #faefd2;
+    z-index: 4;
+    overflow-y: auto;
+}
+.result_card {
+    padding: 2px 4px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+.result_card:hover {
+    transition: all 0.2s ease;
+    background-color: #f59b1b;
+}
+.highlight_red {
+    color: red;
+    font-weight: 600;
 }
