住院藥車覆核話面1.0

--- a/medicine_cart/allocate.css
+++ b/medicine_cart/allocate.css
@@ -57,7 +57,7 @@
 .pb_btn_container {
     display: flex;
     width: 400px;
-    justify-content: space-between;
+    justify-content: end;
 }
 .pb_list_btn {
     position: relative;
