--- a/med_request_build/style.css
+++ b/med_request_build/style.css
@@ -144,6 +144,21 @@
     color: #000;    
     transition: all 0.2s ease-in;
 }
+.actionType_div {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+    margin-bottom: 24px;
+}
+.actionType_label {
+    cursor: pointer;
+    padding-left: 12px;
+    text-decoration: underline;
+    font-size: 18px;
+    color: #4d4d4d;
+}
 .submit_btn {
     width: 60%;
     margin: auto;
