--- a/med_request_build/style.css
+++ b/med_request_build/style.css
@@ -159,9 +159,11 @@
     font-size: 18px;
     color: #4d4d4d;
 }
-.submit_btn {
-    width: 60%;
-    margin: auto;
+.form_btn_container {
+    padding: 0px 40px;
+    display: grid;
+    grid-template-columns: 30% 30%;
+    justify-content: space-between;
 }
 
 .under-line {
