--- a/requisitions_upload_new/style.css
+++ b/requisitions_upload_new/style.css
@@ -87,9 +87,10 @@
     width: 100%;
     margin: auto;
     background-color: #202020;
-    display: flex;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-grow: 1;
 }
 .trigger {
@@ -98,26 +99,55 @@
     border-radius: 50%;
     background-color: #f9f9f9;
     border: 4px solid #bebebe;
+    margin: auto;
+}
+.trigger_homepage {
+    width: 32px;
+    height: 32px;
+    margin: auto;
+}
+.trigger_homepage > img {
+    display: block;
+    width: 100%;
+}
+.trigger_reset {
+    width: 32px;
+    height: 32px;
+    margin: auto;
+}
+.trigger_reset > img {
+    display: block;
+    width: 100%;
 }
 .result_container {
     position: absolute;
-    top: 100svh;
+    bottom: -110%;
     background-color: #ffffff;
     width: 100%;
     padding: 10px 30px 52px;
     border-radius: 30px 30px 0px 0px;
     max-height: 100svh;
-    overflow-x: auto;
+    /* overflow-x: auto; */
+    z-index: 40;
+    transition: all 0.3s ease-in;
+}
+.show_result_container {
+    bottom: calc(-100% + 100px);
 }
 
 .srcoll_bar {
+    padding-bottom: 42px;
+}
+.srcoll_bar > div {
     width: 60%;
     height: 6px;
     border-radius: 3px;
     background-color: #6B6B63;
     margin: auto;
     max-width: 360px;
-    margin-bottom: 32px;
+}
+.expanded {
+    bottom: 0px;
 }
 .med_info_container {
     padding: 10px 16px;
@@ -152,6 +182,12 @@ input:focus {
     background-color: transparent;
     border: none;
     border-bottom: 1.5px solid #000;
+    outline: none;
+}
+input:disabled {
+    background-color: transparent;
+    border: none;
+    border-bottom: none;
     outline: none;
 }
 
