--- a/medGroup/medManager.css
+++ b/medGroup/medManager.css
@@ -29,13 +29,13 @@
     background-color: #6B6B63;
     transition: all 0.2s ease-out;
   }
-.mm_header_container {
-    padding: 8px 68px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.mm_header_title {
+  .mm_header_container {
+      padding: 8px 68px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+  }
+  .mm_header_title {
     font-size: 24px;
     font-weight: 600;
 }
@@ -469,6 +469,8 @@
     display: flex;
 }
 .med_item_content_container {
+    display: flex;
+    flex-direction: column;
     padding: 8px;
     width: 80%;
     flex-grow: 1;
@@ -500,14 +502,18 @@
     margin-top: 4px;
     display: flex;
     justify-content: flex-end;
+    flex-grow: 1;
+    align-items: flex-end;
 }
 .med_item_code_content {
     color: #373737;
 }
 .med_item_modify_btn,
-.med_item_delete_btn {
+.med_item_delete_btn,
+.add_in_generic_drug {
     margin-left: 8px;
     font-weight: 600;
+    max-height: 32px;
 }
 
 /* #popup_date_manager:disabled,
@@ -595,6 +601,9 @@
     }
 }
 @media screen and (max-width: 550px) {
+    .mm_header_container {
+        flex-direction: column;
+    }
     .pre_page_btn,
     .next_page_btn {
         width: 24px;
@@ -635,7 +644,8 @@
         padding: 8px 16px;
     }
     .mm_header_title {
-        margin-left: 60px;
+        margin-left: 0px;
+        margin-bottom: 20px;
     }
     .popup_med_item_div {
         width: 356px;
