--- a/requisitions_upload_new/style.css
+++ b/requisitions_upload_new/style.css
@@ -5,6 +5,10 @@
     font-style: normal;
 }
 
+html, body {
+    overscroll-behavior: none;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -56,31 +60,39 @@
 
 .draw_container {
     width: 100%;
-    aspect-ratio: 3/4; 
+    aspect-ratio: 3/4;
     max-width: 600px;
+    max-height: 800px;
     margin: auto;
     position: relative;
     z-index: 30;
 }
 .draw_canvas {
-    width: 100%;
-    height: 100%;
+    aspect-ratio: 3/4;
     position: absolute;
-    top: 0px;
-    left: 0px;
+    object-fit: cover;
+    top: 50%;
+    left: 50%;
     z-index: 31;
+    display: none;
+    transform: translateX(-50%) translateY(-50%) rotate(-90deg);
 }
 .draw_result {
-    width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     z-index: 32;
 }
 
 #steam_container {
-    display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    /* display: none; */
+    width: 100%;
+    height: 100%;
+    z-index: 32;
 }
 
 .tigger_container {
@@ -142,8 +154,8 @@
 }
 .result_container {
     position: absolute;
-    bottom: -110%;
     background-color: #ffffff;
+    bottom: -100%;
     width: 100%;
     padding: 10px 30px 52px;
     border-radius: 30px 30px 0px 0px;
@@ -151,9 +163,6 @@
     /* overflow-x: auto; */
     z-index: 40;
     transition: all 0.3s ease-in;
-}
-.show_result_container {
-    bottom: calc(-100% + 100px);
 }
 
 .srcoll_bar {
@@ -168,7 +177,7 @@
     max-width: 360px;
 }
 .expanded {
-    bottom: 0px;
+    bottom: 0px !important;
 }
 .med_info_container {
     padding: 10px 16px;
@@ -259,6 +268,12 @@ input:disabled {
     color : rgb(103, 255, 57);
     font-size: 12px;
     white-space : nowrap;
+}
+.result_content_div {
+    margin: 16px;
+    max-height: 160px;
+    overflow-y: auto;
+
 }
 
 
