--- a/frontpage/front_new.css
+++ b/frontpage/front_new.css
@@ -28,7 +28,7 @@ body {
     /* padding-bottom: 40px; */
 }
 .container {
-    min-height: 100svh;
+    min-height: 100vh;
     position: relative;
     max-width: 1200px;
     margin: auto;
