--- a/requisitions_upload/style.css
+++ b/requisitions_upload/style.css
@@ -107,6 +107,13 @@
     cursor: pointer;
     right: 8px;
 }
+.mhb_cancel_btn {
+    display: none;
+    width: 24px;
+    position: absolute;
+    cursor: pointer;
+    right: 8px;
+}
 
 .main_display_btn_container {
     display: flex;
@@ -114,11 +121,21 @@
     margin: 12px 0px;
 }
 .main_display_card_container {
-    background-color: #b8b8b8;
+    background-color: #e1e1e1;
     border-radius: 10px;
     min-height: 100px;
+    padding: 16px;
 }
 
+.card_container {
+    border-radius: 10px;
+    border: 1px solid #000000;
+    padding: 12px;
+    margin-bottom: 16px;
+}
+.card_container:last-child {
+    margin-bottom: 0px;
+}
 .bgc_red {
     background-color: #f69999;
 }
@@ -127,6 +144,33 @@
 }
 .bgc_success {
     background-color: rgb(145, 241, 174);
+}
+
+.card_left_info_container {
+    margin-top: 12px;
+    display: grid;
+    grid-template-columns: 38% 29% 29%;
+    justify-content: space-between;
+}
+.card_left_po_num_container,
+.card_left_batch_num_container,
+.card_left_expirydate_container {
+    display: flex;
+}
+.card_left_po_num_title,
+.card_left_batch_num_title,
+.card_left_expirydate_title,
+.card_left_po_num,
+.card_left_batch_num,
+.card_left_expirydate {
+    text-align: center;
+    margin: 0px 8px;
+}
+.card_left_po_num,
+.card_left_batch_num,
+.card_left_expirydate {
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .under-line {
@@ -164,5 +208,35 @@
     .header_upload_img_btn {
         width: 100%;
         text-align: center;
+    }
+    .main_display_card_container {
+        padding: 8px;
+    }
+    
+    .card_container {
+        padding: 8px;
+        margin-bottom: 8px;
+    }
+
+    .card_left_po_num_container,
+    .card_left_batch_num_container,
+    .card_left_expirydate_container {
+        display: flex;
+        flex-direction: column;
+    }
+    .card_left_po_num_title,
+    .card_left_batch_num_title,
+    .card_left_expirydate_title,
+    .card_left_po_num,
+    .card_left_batch_num,
+    .card_left_expirydate {
+        text-align: center;
+        margin: 0px 0px;
+    }
+    .card_left_po_num,
+    .card_left_batch_num,
+    .card_left_expirydate {
+        font-size: 18px;
+        font-weight: 600;
     }
 }
