--- a/requisitions_upload/style.css
+++ b/requisitions_upload/style.css
@@ -14,6 +14,9 @@
     font-weight: 400;
     font-style: normal;
 }
+#pic_input {
+    display: none;
+}
 
 .header {
     width: 100%;
@@ -50,16 +53,19 @@
 }
 
 .btn {
+  user-select: none;
   margin: 4px;
   font-weight: 600;
   cursor: pointer;
   font-size: 16px;
   border: 1px solid black;
   color: #F6F7F7;
-  padding: 6px 32px;
+  padding: 6px 24px;
   border-radius: 5px;
   transition: all 0.2s ease-out;
   background-color: black;
+  display: flex;
+  justify-content: center;
 }
 .btn:hover {
   background-color: #6B6B63;
@@ -75,102 +81,352 @@
     background-color: #b8b8b8;
     transition: all 0.2s ease-out;
 }
-
-
-.mhb_upload {
-    margin: 0px auto;
-    text-align: center;
-    max-width: 1200px;
+.btn_img {
+    display: block;
+    height: 24px;
+    width: 24px;
+    object-fit: cover;
 }
-.mhb_search_container {
-    max-width: 1200px;
-    margin: 0px auto;
-    position: relative;
-    width: 100%;
+
+.header_logout_btn {
+    padding-top: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.header_logout_btn > img {
+    display: block;
+    width: 36px;
+    height: 36px;
+    pointer-events: none;
+}
+.new_add_pic_container {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    width: 100svw;
+    height: 100vh;
+    height: 100svh;
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+}
+.new_add_pic_btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 12px;
+    flex-direction: column;
+    width: 80%;
+    padding: 32px 32px;
+    border-radius: 16px;
+    border: 2px dashed #bbbbbb;
+    cursor: pointer;
+    letter-spacing: 1px;
+    line-height: 28px;
 }
-.mhb_search_input {
-    width: 100%;
-    font-size: 16px;
-    color: #505050;
-    padding: 4px;
-    border-radius: 5px;
-    border: 2px solid #505050;
-}
-.mhb_search_btn {
-    width: 24px;
+.napc_img {
+    border-radius: 50%;
+    background-color: #c5c5c5;
     display: block;
-    position: absolute;
-    cursor: pointer;
-    right: 8px;
+    padding: 12px;
+    width: 48px;
+    height: 48px;
+    margin-bottom: 8px;
 }
-.mhb_cancel_btn {
-    display: none;
-    width: 24px;
-    position: absolute;
+.napc_content_title {
+    color: #535353;
+    font-size: 24px;
+    font-weight: 600;
+}
+.napc_content {
+    color: #535353;
+    font-size: 16px;
+    font-weight: 400;
+}
+.napc_content > span {
+    color: #000000;
+    font-weight: 600;
+}
+.napc_content_bottom {
+    margin-top: 52px;
+    color: #535353;
+    font-size: 14px;
+    text-align: center;
+}
+
+.main_header_btn_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: relative;
+    padding-bottom: 0px;
+}
+.mhb_new_btn_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 32px;
+    border-radius: 24px;
+    box-shadow: 1px 1px 4px 2px #0000005f;
     cursor: pointer;
-    right: 8px;
+    background-color: #ffffff;
+}
+.mhb_new_img {
+    display: block;
+    width: 32px;
+    height: 32px;
+    margin-right: 12px;
+}
+.mhb_new_content {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.mhb_search_input_div {
+    background-color: #fff;
+    border-radius: 18px;
+    border: 2px solid #767680;
+    position: absolute;
+    right: 0px;
+    top: 29px;
+    z-index: 999;
+    overflow: hidden;
+}
+.search_input_container {
+    display: flex;
+    align-items: center;
+    padding: 6px 12px;
+}
+.search_icon {
+    display: block;
+    margin-right: 8px;
+    height: 16px;
+    width: 16px;
+}
+.search_input {
+    min-width: 200px;
+    border: none;
+    font-size: 16px;
+}
+.search_input:focus {
+    border: none;
+    outline: none;
+}
+.search_result_container {
+    max-height: 206px;
+    overflow-y: auto;
+}
+.blur_search_div {
+    display: flex;
+    padding: 6px 12px;
+    align-items: center;
+    cursor: pointer;
+    background-color: transparent;
+    transition: all 0.2s ease;
+}
+.blur_search_div:hover {
+    background-color: #b8b8b8;
+    transition: all 0.2s ease;
+}
+
+.mdc_sort_container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 8px;
+    margin-bottom: 12px;
+}
+.mdcs_name,
+.mdcs_po_num {
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+    background-color: #d2d2d2;
+    align-items: center;
+    gap: 6px;
+}
+.mdcs_name > img,
+.mdcs_po_num > img {
+    position: relative;
+    display: block;
+    width: 12px;
+    height: 12px;
+    /* transform: rotate(90deg); */
+    transition: all 0.3s ease;
+}
+.mdcs_name {
+    border-radius: 10px 0px 0px 10px;
+    padding: 4px 10px 4px 12px;
+    /* border: 1px solid #000; */
+}
+.mdcs_po_num {
+    border-radius: 0px 10px 10px 0px;
+    padding: 4px 12px 4px 10px;
+    /* border-top: 1px solid #000; */
+    /* border-right: 1px solid #000; */
+    /* border-bottom: 1px solid #000; */
 }
 
 .main_display_btn_container {
+    background-color: #fff;
     display: flex;
     justify-content: space-between;
     margin: 12px 0px;
+    align-items: center;
 }
-.main_display_card_container {
-    background-color: #e1e1e1;
-    border-radius: 10px;
-    min-height: 100px;
-    padding: 16px;
-}
-
-.card_container {
-    border-radius: 10px;
-    border: 1px solid #000000;
-    padding: 12px;
-    margin-bottom: 16px;
-}
-.card_container:last-child {
-    margin-bottom: 0px;
-}
-.bgc_red {
-    background-color: #f69999;
-}
-.bgc_yellow {
-    background-color: rgb(241, 233, 145);
-}
-.bgc_success {
-    background-color: rgb(145, 241, 174);
-}
-
-.card_left_info_container {
-    margin-top: 12px;
-    display: grid;
-    grid-template-columns: 38% 29% 29%;
-    justify-content: space-between;
-}
-.card_left_po_num_container,
-.card_left_batch_num_container,
-.card_left_expirydate_container {
+.mdbc_btn_container {
     display: flex;
 }
-.card_left_po_num_title,
-.card_left_batch_num_title,
-.card_left_expirydate_title,
-.card_left_po_num,
-.card_left_batch_num,
-.card_left_expirydate {
-    text-align: center;
-    margin: 0px 8px;
+.mdc_container {
+    padding: 4px 24px;
+    background-color: #efefef;
+    border-radius: 5px;
 }
-.card_left_po_num,
-.card_left_batch_num,
-.card_left_expirydate {
-    font-size: 20px;
+.bgc_done {
+    background-color: #e3dfdf;
+    color: #716E6E;
+}
+.bgc_set {
+    background-color: #F1F1F1;
+    cursor: pointer;
+}
+.bgc_error {
+    background-color: #F3DBDBC7;
+}
+.card_container {
+    padding: 12px;
+    border-radius: 5px;
+    margin: 16px 0px;
+    box-shadow: 2px 4px 10px 2px #000000a2;
+}
+.card_top {
+    display: flex;
+    justify-content: space-between;
+}
+.card_top_left {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+}
+.camra_img,
+.delete_img,
+.edit_img {
+    position: relative;
+    display: block;
+    pointer-events: none;
+}
+.camra_img {
+    height: 36px;
+    width: 36px;
+    top: 3px;
+}
+.delete_img {
+    height: 32px;
+    width: 32px;
+    top: 2px;
+}
+.edit_img {
+    height: 48px;
+    width: 48px;
+}
+
+.card_po_number {
+    font-size: 24px;
     font-weight: 600;
+    flex-grow: 1;
+}
+.card_top_right {
+    display: flex;
+    align-items: center;
+}
+.new_btn {
+    padding: 2px 16px;
+    border-radius: 2px;
+    background-color: #76768046;
+    box-shadow: 0px 4px 4px 0px #00000079;
+    cursor: pointer;
+    margin: 0px 6px;
+    text-align: center;
+}
+.new_big_btn {
+    padding: 2px 32px;
+    margin: 0px 24px;
+    box-shadow: -1px 1px 4px 2px #00000079;
+}
+.camra_img_big {
+    height: 52px;
+    width: 52px;
+    top: 3px;
+}
+.edit_img_big {
+    height: 52px;
+    width: 52px;
+    top: 3px;
+}
+.card_checkbox {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 25px; /* 調整寬度 */
+    height: 25px; /* 調整高度 */
+    border: 3px solid #000; /* 邊框顏色和大小 */
+    position: relative;
+    cursor: pointer;
+    margin-right: 12px;
+}
+.card_checkbox:checked {
+    background-color: #767680; /* 背景顏色 */
+    border-color: #767680;
+}
+.card_checkbox:checked::before {
+    content: '✔';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 18px; /* 調整勾勾的大小 */
+}
+.card_divide {
+    width: 100%;
+    height: 1px;
+    background-color: #000000;
+    margin: 6px 0px 12px;
+}
+.card_bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.card_name {
+    font-size: 24px;
+    font-weight: 600;
+} 
+.card_cht_name {
+    font-size: 20px;
+} 
+.card_info_container {
+    display: flex;
+}
+.card_expirydate,
+.card_batch_num {
+    font-size: 20px;
+    margin-right: 12px;
+}
+.card_bottom_right {
+    padding: 0px 32px 0px 0px;
+}
+.card_qty {
+    font-size: 64px;
+    font-weight: 600;
+}
+.error_btn_container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .under-line {
@@ -187,6 +443,14 @@
     display: block;
     z-index: 9;
 }
+.sticky {
+    position: fixed;
+    top: 0; /* 固定在畫面頂端 */
+    padding: 12px 0px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* 添加陰影效果 */
+    z-index: 1000;
+    margin: 0px 0px;
+}
 
 @media screen and (max-width: 768px) {
     /* 在寬度小於或等於 768px 的屏幕上應用這些樣式 */
@@ -198,45 +462,114 @@
     /* 在寬度小於或等於 768px 的屏幕上應用這些樣式 */
     .main_div {
         margin-top: 16px;
+        padding: 0px 24px;
     }
     .header_btn_container {
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-right: 0px;
-        padding: 0px 8px;
-    }
-    .header_upload_img_btn {
-        width: 100%;
-        text-align: center;
-    }
-    .main_display_card_container {
-        padding: 8px;
-    }
-    
-    .card_container {
-        padding: 8px;
-        margin-bottom: 8px;
+        margin-right: 16px;
     }
 
-    .card_left_po_num_container,
-    .card_left_batch_num_container,
-    .card_left_expirydate_container {
-        display: flex;
+    .main_header_btn_container {
         flex-direction: column;
+        align-items: center;
+        padding-bottom: 36px;
     }
-    .card_left_po_num_title,
-    .card_left_batch_num_title,
-    .card_left_expirydate_title,
-    .card_left_po_num,
-    .card_left_batch_num,
-    .card_left_expirydate {
-        text-align: center;
-        margin: 0px 0px;
+    .mhb_search_input_div {
+        top: 62px;
     }
-    .card_left_po_num,
-    .card_left_batch_num,
-    .card_left_expirydate {
+    .mhb_new_btn_container {
+        width: 100%;
+        justify-content: center;
+        font-size: 20px;
+        padding: 8px 18px;
+        margin-bottom: 12px;
+    }
+    
+    .mhb_search_input_div {
+        width: 100%;
+    }
+
+
+    .mdc_container {
+        padding: 4px 8px;
+    }
+    .card_container {
+        margin: 8px 0px;
+    }
+    .card_po_number {
         font-size: 18px;
         font-weight: 600;
+    }
+    .new_btn {
+        padding: 1px 16px;
+        border-radius: 2px;
+        background-color: #76768046;
+        box-shadow: 0px 4px 4px 0px #00000079;
+        cursor: pointer;
+        margin: 0px 6px;
+        text-align: center;
+    }
+    .new_big_btn {
+        padding: 2px 24px;
+        margin: 0px 12px;
+    }
+    .card_checkbox {
+        width: 20px; /* 調整寬度 */
+        height: 20px; /* 調整高度 */
+        margin-right: 6px;
+    }
+    .card_bottom_left {
+        max-width: calc(100% - 100px);
+    }
+    .card_name {
+        font-size: 24px;
+    } 
+    .card_cht_name {
+        font-size: 14px;
+    }
+    .card_expirydate,
+    .card_batch_num {
+        font-size: 14px;
+        margin-right: 8px;
+    }
+    .card_bottom_right {
+        padding: 0px 0px 0px 12px;
+    }
+    .card_qty {
+        font-size: 32px;
+        font-weight: 600;
+    }
+    .error_btn_container {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .camra_img {
+        height: 26px;
+        width: 26px;
+        top: 2px;
+    }
+    .delete_img {
+        height: 24px;
+        width: 24px;
+        top: 2px;
+    }
+    .camra_img_big {
+        height: 36px;
+        width: 36px;
+        top: 2px;
+    }
+    .edit_img_big {
+        height: 36px;
+        width: 36px;
+        top: 2px;
+    }
+
+    .mdcs_name,
+    .mdcs_po_num {
+        font-size: 16px;
+        font-weight: 400;
+        gap: 4px;
     }
 }
