--- a/phar_system/medicine_cart/popup_bed_change.css
+++ b/phar_system/medicine_cart/popup_bed_change.css
@@ -7,7 +7,7 @@
     display: flex;
     position: relative;
     justify-content: center;
-    margin-bottom: 16px;
+    margin-bottom: 12px;
 }
 .ppbc_h_title {
     padding: 4px 48px;
@@ -38,86 +38,42 @@
 
 .ppbc_main_container {
     display: grid;
-    justify-content: space-between;
-    grid-template-columns: 18% 18% 18% 18% 18%;
+    grid-template-columns: 100%;
+    gap: 10px;
+    padding-right: 4px;
 }
-.pp_bed_card {
-    position: relative;
-    display: flex;
-    justify-content: center;
+.ppbc_card_container {
+    display: grid;
+    grid-template-columns: 70% 30%;
     align-items: center;
-    /* padding: 16px 0px; */
-    width: 100%;
-    height: 52px;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
     font-size: 18px;
-    font-weight: 600;
-    border-radius: 5px;
-    background-color: #717171;
-    margin-bottom: 12px;
-    cursor: pointer;
-    color: white;
-    /* overflow: hidden; */
 }
-.pp_bed_notice {
-    display: block;
-    position: absolute;
-    width: 24px;
-    top: -8px;
-    right: -6px;
-    z-index: 10;
-}
-.pp_current_bed::after {
-    content: "";
-    width: calc(100% - 8px);
-    height: calc(100% - 8px);
-    position: absolute;
-    border-radius: 5px;
-    border: 4px solid rgb(232, 135, 158);
-}
-.pp_done_bed {
-    background-color: #C1EA69;
-    color: #000000;
+.ppbc_bed_in_bg {
+    background-color: #cdf2d8;
 }
 
-/* .pp_last_selected_bed {
-    border: 2px solid rgb(234, 123, 148);
-} */
-.pp_last_selected_bed::before {
-    content: "前一病床";
-    width: 100%;
-    background-color: rgb(232, 135, 158);
-    color: white;
-    font-size: 12px;
-    font-weight: 400;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: -1px;
-    left: 0px;
-    padding: 0px 0px 1px 0px;
-    border-radius: 0px 0px 5px 5px;
+.ppbc_bed_out_bg {
+    background-color: #ebd6bc;
 }
-.pp_nouse_bed {
-    cursor: not-allowed;
-    background-color: #d4d4d4;
+
+.ppbc_paitient_status,
+.ppbc_paitient_bed {
+    text-align: center;
 }
-.pp_nouse_bed::before {
-    content: "空床";
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #9a9a9a;
-    border-radius: 0px 0px 5px 5px;
-    width: 100%;
-    bottom: 0px;
-    font-size: 12px;
-    color: #000000;
+
+.ppbc_paitient_bed {
+    text-decoration: underline;
 }
+
+
 .ppbc_footer_container {
     display: flex;
     justify-content: space-between;
+    margin-top: 12px;
 }
 
 @media screen and (max-width: 550px) {
@@ -125,7 +81,7 @@
         width: 360px;
     }
     .ppbc_main_container {
-        height: 520px;
+        height: 504px;
         overflow-y: scroll;
     }
     .pp_bed_card {
