--- a/login.css
+++ b/login.css
@@ -1,10 +1,19 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    background-color: #344A7D;
     background: linear-gradient(to bottom, #8CAAEE, #344A7D);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    overflow-y: hidden; /* 禁止垂直滾動 */
+    overflow-y: hidden;
+    /* height: 800px; */
+    height: 100%;
+    height: 100vh;
+    height: 100svh;
+    /* width: 600px; */
+    width: 100%;
+    width: 100vw;
+    width: 100svw;
 }
 
 .container {
@@ -12,6 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
     min-height: 100svh;
 }
 
@@ -57,6 +67,7 @@ body {
     margin-bottom: 6px;
 }
 .form_background {
+    background-color: rgba(216, 216, 216, 0.5);
     border-radius: 50px;
     top: 0;
     left: 0;
@@ -64,7 +75,6 @@ body {
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: #d8d8d877;
 }
 
 .login-form h2 {
