--- a/phar_system/medicine_cart/popup_bed_change_search.css
+++ b/phar_system/medicine_cart/popup_bed_change_search.css
@@ -36,6 +36,21 @@
     left: 0px;
 }
 
+.ppbcs_main_container {
+    display: grid;
+    grid-template-columns: 100%;
+    gap: 12px;
+}
+.ppbcs_input_container > input,
+.ppbcs_status_select_input {
+    border-radius: 4px;
+    border: 1px solid #000000;
+    padding: 4px 6px;
+    font-size: 18px;
+    display: block;
+    width: 100%;
+}
+
 .ppbcs_footer_container {
     display: flex;
     justify-content: space-between;
